# git_agent_race_controller

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
docs/: SPEC_RAI_ALIGNMENT.md  spec.md
scripts/: install.sh
src/: cli.rs  config.rs  engine.rs  errors.rs  git.rs  installer.rs  main.rs  mesh.rs  output.rs
tests/: cli.rs
