[package]
name = "garc"
version = "0.1.0"
edition = "2024"
description = "Git Agent Race Controller"
license = "MIT"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
git2 = "0.20.2"
mdns-sd = "0.18.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
toml = "0.9.7"

[dev-dependencies]
tempfile = "3.23.0"
